[gd_scene load_steps=3 format=3 uid="uid://cjx2qgni8b738"]

[ext_resource type="Script" uid="uid://dfff2ic70undn" path="res://features/menu/options/options.gd" id="1_bx6by"]

[sub_resource type="LabelSettings" id="LabelSettings_hph4l"]
font_size = 30

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bx6by")

[node name="AudioOptions" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_right = 0.104
anchor_bottom = 0.127
offset_left = 756.0
offset_top = 123.0
offset_right = 921.192
offset_bottom = 204.704

[node name="MusicLabel" type="Label" parent="AudioOptions"]
layout_mode = 2
text = "Audio"
label_settings = SubResource("LabelSettings_hph4l")

[node name="MasterVolumeOptions" type="VBoxContainer" parent="AudioOptions"]
layout_mode = 2

[node name="MasterVolumeLabel" type="Label" parent="AudioOptions/MasterVolumeOptions"]
layout_mode = 2
text = "Master"

[node name="MasterVolumeSlider" type="HSlider" parent="AudioOptions/MasterVolumeOptions"]
unique_name_in_owner = true
layout_mode = 2

[node name="MusicOptions" type="VBoxContainer" parent="AudioOptions"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="AudioOptions/MusicOptions"]
layout_mode = 2
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="AudioOptions/MusicOptions"]
unique_name_in_owner = true
layout_mode = 2

[node name="SFXVolumeOptions" type="VBoxContainer" parent="AudioOptions"]
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="AudioOptions/SFXVolumeOptions"]
layout_mode = 2
text = "Sound Effects"

[node name="SFXVolumeSlider" type="HSlider" parent="AudioOptions/SFXVolumeOptions"]
unique_name_in_owner = true
layout_mode = 2
